--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap');
+    </style>
     <title>Sportit</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
+
+    <!-- Header, logo y menú de navegación -->
     <header>
         <div class="logo">
-            Sportit
+            <img src="imagenes/logo.svg" alt="Logo Sportit">
         </div>
         <nav class="header-nav">
             <button></button>
@@ -26,75 +33,107 @@
             <button>Contact</button>
         </div>
     </header>
+
+
     <main>
+
+        <!--Artículo principal  -->
         <section class="slider-container">
             <div>
-                <img src=""/>
+                <img src="imagenes/padel-intro.png" alt="Jugador de padel" />
             </div>
             <div class="slider-container-text">
                 <h1>
                     LIVE: Follow the Telcel Huawei Mexico Open 2022 for free
                 </h1>
                 <div>
-                    the final Open of the 2022 World Podel Tour season if underway, don't miss out on any of the  action!
+                    The final Open of the 2022 World Podel Tour season if underway, don't miss out on any of the action!
                 </div>
                 <div>
                     <button>Contact</button>
                 </div>
             </div>
         </section>
+
+        <!-- Artículo Secundario "Diferencia de jugadores pros" -->
         <section class="diff-section">
             <div>
                 <h2>What's different between pros?</h2>
             </div>
             <div>
-                Lorem ipsum dolor sit, possimus explicabo blanditiis recusandae, consectetur optio unde atque perspiciatis velit. Enim eaque doloribus id pariatur?
-            </div>
+                An athlete looking to improve his or her game can benefit can benefit from sports psychology at any
+                time.
+                Junior athletes can get a significant head start on their peers by developing their mental strength
+                early on, rather than waiting until college or beyond. Seasoned pros can ensure they stay on top of
+                their game, never letting themselves get complacent, by training their minds appropriately. </div>
         </section>
+
+        <!-- Contenido Segundo Artículo -->
         <section class="company-items">
             <ol>
                 <li>
                     <h3>Track company-wide progress</h3>
                     <div>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo modi ipsa cumque corrupti minus eos dolores at, consequuntur aut cum ratione amet.
+                        Working on a task is always a team effort. The result depends on the common efforts of all
+                        participants: the project manager, the employee as well as the assistants. It seldom happens
+                        when
+                        the project manager has correctly formulated the task, and the employee immediately accomplishes
+                        it
+                        without any questions. If the employee asks questions and the project manager brushes them off,
+                        nothing good will come of it.
                     </div>
                 </li>
                 <li>
                     <h3>Advance built-in reports</h3>
                     <div>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo modi ipsa cumque corrupti minus eos dolores at, consequuntur aut cum ratione amet.
+                        Advanced reporting can be described as the process of collecting data, breaking down information
+                        into meaningful pieces, and then putting it back together in a way that makes sense to the
+                        reader.
+                        This process involves gathering data that has been gathered by other sources and making sense
+                        out of
+                        it.
                     </div>
                 </li>
                 <li>
-                    <h3>Everything you need in one piece</h3>
+                    <h3>Everything you need in one place</h3>
                     <div>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo modi ipsa cumque corrupti minus eos dolores at, consequuntur aut cum ratione amet.
+                        One tought to have a place set aside in which everything can be stored, and everything should be
+                        stored in that place when it is not being used.
                     </div>
                 </li>
             </ol>
         </section>
+
+        <!-- Tercer Artículo: "Best of the month" -->
+
         <section class="employee-list">
             <h2>Best of the month</h2>
             <div class="employee-wrapper">
                 <div class="employee">
-                    <img/>
-                    <h3>Sonya</h3>
+                    <img />
+                    <h3>Sanyo</h3>
                     <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse laudantium dolore incidunt autem itaque optio repellendus amet, consequuntur maxime.
+                        Carlos Daniel Gutiérrez, better known as Sanyo Gutiérrez, is an Argentine padel player, one of
+                        the veterans of the World Padel Tour. He plays drive alongside Agustín Tapia and is known as the
+                        magician of San Luis (in reference to the town where he was born) and as Abracadabra Gutiérrez.
+                        Sanyo uses Head's ALPHA PRO padel racket in black and white.
                     </div>
                 </div>
                 <div class="employee">
-                    <img/>
-                    <h3>Sonya</h3>
+                    <img />
+                    <h3>Lebrón</h3>
                     <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse laudantium dolore incidunt autem itaque optio repellendus amet, consequuntur maxime.
+                        A padel star from Spain, Juan Lebrón Chincoa has won numerous high profile tournaments and is
+                        regularly among the sports top-ranked players.
                     </div>
                 </div>
                 <div class="employee">
-                    <img/>
-                    <h3>Sonya</h3>
+                    <img />
+                    <h3>Navarro</h3>
                     <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse laudantium dolore incidunt autem itaque optio repellendus amet, consequuntur maxime.
+                        Francisco Navarro Compán, aka Paquito Navarro, is the most dynamic, famous, and well-known
+                        Spanish padel player of our day. He is on his way to becoming his country’s most accomplished
+                        and recognized athlete.
                     </div>
                 </div>
             </div>
@@ -117,16 +156,16 @@
                 </div>
                 <div class="social-links">
                     <a href="https://www.facebook.com">
-                        <img src=""/>
+                        <img src="" />
                     </a>
                     <a href="https://www.youtube.com">
-                        <img src=""/>
+                        <img src="" />
                     </a>
                     <a href="https://www.twitter.com">
-                        <img src=""/>
+                        <img src="" />
                     </a>
                     <a href="https://www.instagram.com">
-                        <img src=""/>
+                        <img src="" />
                     </a>
                 </div>
             </div>
@@ -145,11 +184,12 @@
             </nav>
             <div class="searching-box">
                 <form>
-                    <input type="text"/>
+                    <input type="text" />
                     <button>Go</button>
                 </form>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
