Adding final images content from figma

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <h2>Best of the month</h2>
             <div class="employee-wrapper">
                 <div class="employee">
-                    <img />
+                    <img src="imagenes/avatar-sanyo.png" alt="Fotografía de Sanyo" />
                     <h3>Sanyo</h3>
                     <div>
                         Carlos Daniel Gutiérrez, better known as Sanyo Gutiérrez, is an Argentine padel player, one of
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="employee">
-                    <img />
+                    <img src="imagenes/avatar.lebron.png" alt="Fotografía de Lebrón" />
                     <h3>Lebrón</h3>
                     <div>
                         A padel star from Spain, Juan Lebrón Chincoa has won numerous high profile tournaments and is
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="employee">
-                    <img />
+                    <img src="imagenes/avatar-navarro.png" alt="Fotografía de Navarro" />
                     <h3>Navarro</h3>
                     <div>
                         Francisco Navarro Compán, aka Paquito Navarro, is the most dynamic, famous, and well-known
@@ -140,7 +140,11 @@
             <button>More</button>
         </section>
     </main>
+
+    <!-- Final de página -->
     <footer>
+
+        <!-- Direccionamiento a artículo externo -->
         <div class="footer-info">
             <div>
                 <h2>Get to know the bes teams of the year</h2>
@@ -149,23 +153,25 @@
                 <button>Go for it</button>
             </div>
         </div>
+
+        <!-- inks a redes sociales -->
         <div class="footer-links">
             <div class="social">
                 <div class="logo">
-                    sportit
+                    <img src="imagenes/logo.svg" alt="Logo sportit">
                 </div>
                 <div class="social-links">
                     <a href="https://www.facebook.com">
-                        <img src="" />
+                        <img src="imagenes/icon-facebook.svg" alt="Ir a Facebook" />
                     </a>
                     <a href="https://www.youtube.com">
-                        <img src="" />
+                        <img src="imagenes/icon-youtube.svg" alt="It a Youtube" />
                     </a>
                     <a href="https://www.twitter.com">
-                        <img src="" />
+                        <img src="imagenes/icon-twitter.svg" alt="Ir a Twitter" />
                     </a>
                     <a href="https://www.instagram.com">
-                        <img src="" />
+                        <img src="imagenes/icon-instagram.svg" alt="Ir a Instagram" />
                     </a>
                 </div>
             </div>
