--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div>
         </div>
 
-        <!-- inks a redes sociales -->
+        <!-- links a redes sociales -->
         <div class="footer-links">
             <div class="social">
                 <div class="logo">
