--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap');
+
+        .pointer {
+            cursor: pointer;
+        }
     </style>
     <title>Sportit</title>
     <link rel="stylesheet" href="css/styles.css">
@@ -115,8 +119,7 @@
                     <div>
                         Carlos Daniel Gutiérrez, better known as Sanyo Gutiérrez, is an Argentine padel player, one of
                         the veterans of the World Padel Tour. He plays drive alongside Agustín Tapia and is known as the
-                        magician of San Luis (in reference to the town where he was born) and as Abracadabra Gutiérrez.
-                        Sanyo uses Head's ALPHA PRO padel racket in black and white.
+                        magician of San Luis.
                     </div>
                 </div>
                 <div class="employee">
