Finishing font sizes

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <!-- Direccionamiento a artículo externo -->
         <div class="footer-info">
             <div>
-                <h2>Get to know the bes teams of the year</h2>
+                <h2>Get to know the best teams of the year</h2>
             </div>
             <div>
                 <button>Go for it</button>
