--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="footer-links">
             <div class="social">
                 <div class="logo">
-                    <img src="imagenes/logo.svg" alt="Logo sportit">
+                    <img src="imagenes/logopadel.png" alt="Logo sportit">
                 </div>
                 <div class="social-links">
                     <a href="https://www.facebook.com">
@@ -196,8 +196,12 @@
                     <input type="text" />
                     <button>Go</button>
                 </form>
+                <div class="copyright">
+                    Copyright 2020. All Rights Reserved
+                </div>
             </div>
         </div>
+
     </footer>
 </body>
 
