--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap');
-
-        .pointer {
-            cursor: pointer;
-        }
     </style>
     <title>Sportit</title>
     <link rel="stylesheet" href="css/styles.css">
@@ -24,7 +20,8 @@
             <img src="imagenes/logo.svg" alt="Logo Sportit">
         </div>
         <nav class="header-nav">
-            <button></button>
+
+
             <div class="menu">
                 <a href="./sports.html">Sports</a>
                 <a href="./products.html">Products</a>
@@ -35,6 +32,9 @@
         </nav>
         <div>
             <button>Contact</button>
+        </div>
+        <div class="icon">
+            <img src="imagenes/icon-hamburger.svg" alt="Menú de navegación" />
         </div>
     </header>
 
