--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         </div>
         <nav class="header-nav">
 
+            <div class="icon">
+                <img src="imagenes/icon-hamburger.svg" alt="Menú de navegación" />
+            </div>
 
             <div class="menu">
                 <a href="./sports.html">Sports</a>
@@ -30,12 +33,10 @@
                 <a href="./community.html">Community</a>
             </div>
         </nav>
-        <div>
+        <div class="desktop_button">
             <button>Contact</button>
         </div>
-        <div class="icon">
-            <img src="imagenes/icon-hamburger.svg" alt="Menú de navegación" />
-        </div>
+
     </header>
 
 
