Adding final checkpoint

--- a/index.html
+++ b/index.html
@@ -177,6 +177,9 @@
                     <a href="https://www.instagram.com">
                         <img src="imagenes/icon-instagram.svg" alt="Ir a Instagram" />
                     </a>
+                    <a href="https://www.pinterest.com">
+                        <img src="imagenes/icon-pinterest.svg" alt="Ir a Pinterest" />
+                    </a>
                 </div>
             </div>
             <nav class="footer-nav">
@@ -199,7 +202,7 @@
                 </form>
             </div>
         </div>
-
+        <!-- Copyright -->
         <div class="copyright">
             Copyright 2020. All Rights Reserved
         </div>
